# ABoard

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.zh.md
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  lib.rs  main.rs  tray.rs
src-tauri/src/ai/: cloud.rs  config.rs  embedded.rs  local.rs  mod.rs  models.rs  processor.rs  router.rs
src-tauri/tests/: db_test.rs
src/components/: AiResultPopup.tsx  AiToolbox.tsx  ClipboardItemCard.tsx  ConfirmDialog.tsx  ContentArea.tsx  ContextMenu.tsx  FloatingPopup.tsx  ImagePreview.tsx  ItemDetailModal.tsx  MainLayout.tsx  RecordingIndicator.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/__tests__/: ClipboardItemCard.test.ts  ConfirmDialog.test.tsx  ContentArea.test.ts  Sidebar.test.ts
src/stores/: ai-actions.ts  clipboard.ts  format-tools.ts  i18n.ts  theme.ts
src/stores/__tests__/: ai-actions.test.ts  clipboard.test.ts  format-tools.test.ts  i18n.test.ts  theme.test.ts
src/styles/: design-tokens.css  index.css
tests/: ai-tools-test.py  ui-compare-test.py
