[package]
name = "aboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "aboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
arboard = "3"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures-util = "0.3"
tauri-plugin-dialog = "2.7.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
base64 = "0.22"
zip = "2"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
tokenizers = { version = "0.22.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.27.0"
